[gd_scene load_steps=26 format=3 uid="uid://d3adetdy3ajss"]

[ext_resource type="Script" path="res://scene.gd" id="1_7ucbc"]
[ext_resource type="Texture2D" uid="uid://dvppp0cc0eyue" path="res://bear.png" id="1_rkknv"]
[ext_resource type="Script" path="res://Player.gd" id="2_73i0e"]
[ext_resource type="Texture2D" uid="uid://ca464sa77l0ml" path="res://tiles.png" id="2_pui71"]
[ext_resource type="Script" path="res://Scores.gd" id="5_ify1r"]
[ext_resource type="Texture2D" uid="uid://cn5p0vusvsrv" path="res://redFish.png" id="5_rvl4h"]
[ext_resource type="Texture2D" uid="uid://cvgh4yjbgchsk" path="res://greenFish.png" id="6_ivwyn"]
[ext_resource type="LabelSettings" uid="uid://b7vlkxjc4l3ny" path="res://scene.tres" id="6_msi8s"]
[ext_resource type="Script" path="res://Control.gd" id="6_wcsky"]
[ext_resource type="Texture2D" uid="uid://pb5wxk3py1t8" path="res://purpleFish.png" id="7_bxi1y"]
[ext_resource type="Texture2D" uid="uid://c6juu768y1nbs" path="res://potion.png" id="10_kai1x"]
[ext_resource type="Script" path="res://items.gd" id="10_rjhi8"]
[ext_resource type="Texture2D" uid="uid://f73ducmfi4ut" path="res://harpoon.png" id="11_liydy"]
[ext_resource type="Texture2D" uid="uid://b0mlug858lj4r" path="res://fishTackle.png" id="12_fpt8b"]
[ext_resource type="Texture2D" uid="uid://dx6dnvaoh8ajb" path="res://bomb.png" id="13_ylwvx"]
[ext_resource type="AudioStream" uid="uid://cd7m2kv1gi4xd" path="res://Track 3 (Soothing Backyard).wav" id="16_uiab7"]
[ext_resource type="AudioStream" uid="uid://ch6gfeisy22ve" path="res://Splat-SoundBible.com-1826190667.wav" id="17_rri6f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w3twl"]
texture = ExtResource("2_pui71")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -9.01561, -16, -8.30851)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_mojtx"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_w3twl")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hlewy"]
size = Vector2(67, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75jqj"]
size = Vector2(26, 711)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grls3"]
size = Vector2(33, 720.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abyy0"]
size = Vector2(1199.5, 48)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ykemc"]

[sub_resource type="Theme" id="Theme_j3kjn"]

[node name="Main" type="Node2D"]
position = Vector2(20, -2)
script = ExtResource("1_7ucbc")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-2, 2)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_mojtx")
rendering_quadrant_size = 32
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(589824, 65536, 0, 589825, 65536, 0, 589826, 65536, 0, 589827, 65536, 0, 589828, 65536, 0, 589829, 65536, 0, 589830, 65536, 0, 589831, 65536, 0, 589832, 65536, 0, 589833, 65536, 0, 589834, 65536, 0, 589835, 65536, 0, 589836, 65536, 0, 589837, 65536, 0, 589838, 65536, 0, 589839, 65536, 0, 589840, 65536, 0, 589841, 65536, 0, 524305, 65536, 0, 524304, 65536, 0, 524303, 65536, 0, 524302, 65536, 0, 524301, 65536, 0, 524300, 65536, 0, 524299, 65536, 0, 524298, 65536, 0, 524297, 65536, 0, 524296, 65536, 0, 524295, 65536, 0, 524294, 65536, 0, 524293, 65536, 0, 524292, 65536, 0, 524291, 65536, 0, 524290, 65536, 0, 524289, 65536, 0, 524288, 65536, 0, 655360, 65536, 0, 655361, 65536, 0, 655362, 65536, 0, 655367, 65536, 0, 655368, 65536, 0, 655369, 65536, 0, 655370, 65536, 0, 655371, 65536, 0, 655366, 65536, 0, 655365, 65536, 0, 655364, 65536, 0, 655363, 65536, 0, 655373, 65536, 0, 655372, 65536, 0, 655374, 65536, 0, 655375, 65536, 0, 655376, 65536, 0, 655377, 65536, 0, 458769, 65536, 0, 458768, 65536, 0, 458767, 65536, 0, 393231, 65536, 0, 393230, 65536, 0, 393229, 65536, 0, 393228, 65536, 0, 393227, 65536, 0, 393226, 65536, 0, 327689, 65536, 0, 327688, 65536, 0, 327687, 65536, 0, 327686, 65536, 0, 327685, 65536, 0, 262148, 65536, 0, 262147, 65536, 0, 262146, 65536, 0, 327682, 65536, 0, 393219, 65536, 0, 393220, 65536, 0, 393221, 65536, 0, 393222, 65536, 0, 393218, 65536, 0, 393217, 65536, 0, 327681, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 458752, 65536, 0, 458753, 65536, 0, 458754, 65536, 0, 458755, 65536, 0, 458756, 65536, 0, 458757, 65536, 0, 458758, 65536, 0, 458759, 65536, 0, 458760, 65536, 0, 458761, 65536, 0, 458762, 65536, 0, 458763, 65536, 0, 458764, 65536, 0, 393225, 65536, 0, 393224, 65536, 0, 393223, 65536, 0, 458765, 65536, 0, 458766, 65536, 0, 393232, 65536, 0, 393233, 65536, 0, 327697, 65536, 0, 327696, 65536, 0, 327695, 65536, 0, 327694, 65536, 0, 327693, 65536, 0, 327692, 65536, 0, 327691, 65536, 0, 327690, 65536, 0, 327684, 65536, 0, 327683, 65536, 0, 262145, 65536, 0, 262144, 65536, 0, 196608, 65536, 0, 196609, 65536, 0, 196610, 65536, 0, 196611, 65536, 0, 196612, 65536, 0, 196613, 65536, 0, 196614, 65536, 0, 196615, 65536, 0, 196616, 65536, 0, 196617, 65536, 0, 262153, 65536, 0, 262154, 65536, 0, 262155, 65536, 0, 262156, 65536, 0, 262152, 65536, 0, 262151, 65536, 0, 262150, 65536, 0, 262149, 65536, 0, 262157, 65536, 0, 262158, 65536, 0, 262159, 65536, 0, 196623, 65536, 0, 196622, 65536, 0, 196621, 65536, 0, 196620, 65536, 0, 196619, 65536, 0, 196618, 65536, 0, 196624, 65536, 0, 262160, 65536, 0, 262161, 65536, 0, 196625, 65536, 0, 0, 196608, 0, 1, 196608, 0, 2, 196608, 0, 3, 196608, 0, 4, 196608, 0, 5, 196608, 0, 6, 196608, 0, 7, 196608, 0, 8, 196608, 0, 9, 196608, 0, 10, 196608, 0, 11, 196608, 0, 12, 196608, 0, 13, 196608, 0, 14, 196608, 0, 15, 196608, 0, 16, 196608, 0, 17, 196608, 0, 65553, 196608, 0, 65552, 196608, 0, 65551, 196608, 0, 65550, 196608, 0, 65549, 196608, 0, 65548, 196608, 0, 65547, 196608, 0, 65546, 196608, 0, 65545, 196608, 0, 65544, 196608, 0, 65543, 196608, 0, 65542, 196608, 0, 65541, 196608, 0, 65540, 196608, 0, 65539, 196608, 0, 65538, 196608, 0, 65537, 196608, 0, 65536, 196608, 0, 131072, 196608, 0, 131073, 196608, 0, 131074, 196608, 0, 131075, 196608, 0, 131076, 196608, 0, 131077, 196608, 0, 131078, 196608, 0, 131079, 196608, 0, 131080, 196608, 0, 131081, 196608, 0, 131082, 196608, 0, 131083, 196608, 0, 131084, 196608, 0, 131085, 196608, 0, 131086, 196608, 0, 131087, 196608, 0, 131088, 196608, 0, 131089, 196608, 0, 720896, 65536, 0, 720897, 65536, 0, 720898, 65536, 0, 720899, 65536, 0, 720900, 65536, 0, 720901, 65536, 0, 720902, 65536, 0, 655378, 65536, 0, 655379, 65536, 0, 655380, 65536, 0, 655381, 65536, 0, 589842, 65536, 0, 655382, 65536, 0, 655383, 65536, 0, 720912, 65536, 0, 720911, 65536, 0, 720910, 65536, 0, 720909, 65536, 0, 720908, 65536, 0, 720907, 65536, 0, 786442, 65536, 0, 786441, 65536, 0, 786440, 65536, 0, 786439, 65536, 0, 786443, 65536, 0, 786444, 65536, 0, 786445, 65536, 0, 786446, 65536, 0, 786447, 65536, 0, 786448, 65536, 0, 786449, 65536, 0, 786450, 65536, 0, 786451, 65536, 0, 786452, 65536, 0, 786453, 65536, 0, 720904, 65536, 0, 720905, 65536, 0, 720906, 65536, 0, 720903, 65536, 0, 720913, 65536, 0, 720914, 65536, 0, 720915, 65536, 0, 720916, 65536, 0, 720917, 65536, 0, 720918, 65536, 0, 720919, 65536, 0, 720920, 65536, 0, 720921, 65536, 0, 720922, 65536, 0, 720923, 65536, 0, 851985, 65536, 0, 851984, 65536, 0, 851983, 65536, 0, 851982, 65536, 0, 851981, 65536, 0, 851980, 65536, 0, 851979, 65536, 0, 851978, 65536, 0, 851977, 65536, 0, 917512, 65536, 0, 917513, 65536, 0, 917514, 65536, 0, 917515, 65536, 0, 917516, 65536, 0, 917517, 65536, 0, 917518, 65536, 0, 917519, 65536, 0, 917520, 65536, 0, 851986, 65536, 0, 851987, 65536, 0, 851988, 65536, 0, 851989, 65536, 0, 851990, 65536, 0, 851991, 65536, 0, 851976, 65536, 0, 851975, 65536, 0, 851974, 65536, 0, 786438, 65536, 0, 786437, 65536, 0, 786436, 65536, 0, 786435, 65536, 0, 786434, 65536, 0, 786433, 65536, 0, 786432, 65536, 0, 851968, 65536, 0, 917503, 65536, 0, 917502, 65536, 0, 917501, 65536, 0, 851969, 65536, 0, 851970, 65536, 0, 851971, 65536, 0, 851972, 65536, 0, 851973, 65536, 0, 917508, 65536, 0, 917507, 65536, 0, 917506, 65536, 0, 917505, 65536, 0, 917504, 65536, 0, 983039, 65536, 0, 983038, 65536, 0, 983037, 65536, 0, 983036, 65536, 0, 983035, 65536, 0, 983034, 65536, 0, 917509, 65536, 0, 917510, 65536, 0, 917511, 65536, 0, 983052, 65536, 0, 983051, 65536, 0, 983050, 65536, 0, 983049, 65536, 0, 983048, 65536, 0, 983047, 65536, 0, 983046, 65536, 0, 983045, 65536, 0, 983044, 65536, 0, 1048579, 65536, 0, 1048578, 65536, 0, 1048577, 65536, 0, 1048580, 65536, 0, 1048581, 65536, 0, 1048582, 65536, 0, 1048583, 65536, 0, 1048584, 65536, 0, 1048585, 65536, 0, 1048586, 65536, 0, 1048587, 65536, 0, 1048588, 65536, 0, 1048589, 65536, 0, 1048590, 65536, 0, 1048591, 65536, 0, 1048576, 65536, 0, 1114111, 65536, 0, 1114110, 65536, 0, 983043, 65536, 0, 983041, 65536, 0, 983040, 65536, 0, 1048575, 65536, 0, 1048574, 65536, 0, 983042, 65536, 0, 1114121, 65536, 0, 1114122, 65536, 0, 1114123, 65536, 0, 1114124, 65536, 0, 983053, 65536, 0, 1114125, 65536, 0, 983054, 65536, 0, 1114126, 65536, 0, 983055, 65536, 0, 1114127, 65536, 0, 983056, 65536, 0, 1048592, 65536, 0, 1114128, 65536, 0, 917521, 65536, 0, 983057, 65536, 0, 1048593, 65536, 0, 1114129, 65536, 0, 196626, 65536, 0, 262162, 65536, 0, 327698, 65536, 0, 393234, 65536, 0, 458770, 65536, 0, 524306, 65536, 0, 917522, 65536, 0, 983058, 65536, 0, 1048594, 65536, 0, 1114130, 65536, 0, 196627, 65536, 0, 262163, 65536, 0, 327699, 65536, 0, 393235, 65536, 0, 458771, 65536, 0, 524307, 65536, 0, 589843, 65536, 0, 917523, 65536, 0, 983059, 65536, 0, 1048595, 65536, 0, 1114131, 65536, 0, 196628, 65536, 0, 262164, 65536, 0, 327700, 65536, 0, 393236, 65536, 0, 458772, 65536, 0, 524308, 65536, 0, 589844, 65536, 0, 917524, 65536, 0, 983060, 65536, 0, 1048596, 65536, 0, 1114132, 65536, 0, 196629, 65536, 0, 262165, 65536, 0, 327701, 65536, 0, 393237, 65536, 0, 458773, 65536, 0, 524309, 65536, 0, 589845, 65536, 0, 917525, 65536, 0, 983061, 65536, 0, 1048597, 65536, 0, 1114133, 65536, 0, 196630, 65536, 0, 262166, 65536, 0, 327702, 65536, 0, 393238, 65536, 0, 458774, 65536, 0, 524310, 65536, 0, 589846, 65536, 0, 786454, 65536, 0, 917526, 65536, 0, 983062, 65536, 0, 1048598, 65536, 0, 1114134, 65536, 0, 196631, 65536, 0, 262167, 65536, 0, 327703, 65536, 0, 393239, 65536, 0, 458775, 65536, 0, 524311, 65536, 0, 589847, 65536, 0, 786455, 65536, 0, 917527, 65536, 0, 983063, 65536, 0, 1048599, 65536, 0, 1114135, 65536, 0, 196632, 65536, 0, 262168, 65536, 0, 327704, 65536, 0, 393240, 65536, 0, 458776, 65536, 0, 524312, 65536, 0, 589848, 65536, 0, 655384, 65536, 0, 786456, 65536, 0, 851992, 65536, 0, 917528, 65536, 0, 983064, 65536, 0, 1048600, 65536, 0, 1114136, 65536, 0, 196633, 65536, 0, 262169, 65536, 0, 327705, 65536, 0, 393241, 65536, 0, 458777, 65536, 0, 524313, 65536, 0, 589849, 65536, 0, 655385, 65536, 0, 786457, 65536, 0, 851993, 65536, 0, 917529, 65536, 0, 983065, 65536, 0, 1048601, 65536, 0, 1114137, 65536, 0, 196634, 65536, 0, 262170, 65536, 0, 327706, 65536, 0, 393242, 65536, 0, 458778, 65536, 0, 524314, 65536, 0, 589850, 65536, 0, 655386, 65536, 0, 786458, 65536, 0, 851994, 65536, 0, 917530, 65536, 0, 983066, 65536, 0, 1048602, 65536, 0, 1114138, 65536, 0, 196635, 65536, 0, 262171, 65536, 0, 327707, 65536, 0, 393243, 65536, 0, 458779, 65536, 0, 524315, 65536, 0, 589851, 65536, 0, 655387, 65536, 0, 786459, 65536, 0, 851995, 65536, 0, 917531, 65536, 0, 983067, 65536, 0, 1048603, 65536, 0, 1114139, 65536, 0, 196636, 65536, 0, 262172, 65536, 0, 327708, 65536, 0, 393244, 65536, 0, 458780, 65536, 0, 524316, 65536, 0, 589852, 65536, 0, 655388, 65536, 0, 720924, 65536, 0, 786460, 65536, 0, 851996, 65536, 0, 917532, 65536, 0, 983068, 65536, 0, 1048604, 65536, 0, 1114140, 65536, 0, 196637, 65536, 0, 262173, 65536, 0, 327709, 65536, 0, 393245, 65536, 0, 458781, 65536, 0, 524317, 65536, 0, 589853, 65536, 0, 655389, 65536, 0, 720925, 65536, 0, 786461, 65536, 0, 851997, 65536, 0, 917533, 65536, 0, 983069, 65536, 0, 1048605, 65536, 0, 1114141, 65536, 0, 196638, 65536, 0, 262174, 65536, 0, 327710, 65536, 0, 393246, 65536, 0, 458782, 65536, 0, 524318, 65536, 0, 589854, 65536, 0, 655390, 65536, 0, 720926, 65536, 0, 786462, 65536, 0, 851998, 65536, 0, 917534, 65536, 0, 983070, 65536, 0, 1048606, 65536, 0, 1114142, 65536, 0, 18, 196608, 0, 65554, 196608, 0, 131090, 196608, 0, 19, 196608, 0, 65555, 196608, 0, 131091, 196608, 0, 20, 196608, 0, 65556, 196608, 0, 131092, 196608, 0, 21, 196608, 0, 65557, 196608, 0, 131093, 196608, 0, 22, 196608, 0, 65558, 196608, 0, 131094, 196608, 0, 23, 196608, 0, 65559, 196608, 0, 131095, 196608, 0, 24, 196608, 0, 65560, 196608, 0, 131096, 196608, 0, 25, 196608, 0, 65561, 196608, 0, 131097, 196608, 0, 26, 196608, 0, 65562, 196608, 0, 131098, 196608, 0, 27, 196608, 0, 65563, 196608, 0, 131099, 196608, 0, 28, 196608, 0, 65564, 196608, 0, 131100, 196608, 0, 29, 196608, 0, 65565, 196608, 0, 131101, 196608, 0, 30, 196608, 0, 65566, 196608, 0, 131102, 196608, 0, 262138, 65536, 0, 327674, 65536, 0, 393210, 65536, 0, 458746, 65536, 0, 524282, 65536, 0, 589818, 65536, 0, 655354, 65536, 0, 720890, 65536, 0, 786426, 65536, 0, 851962, 65536, 0, 917498, 65536, 0, 262139, 65536, 0, 327675, 65536, 0, 393211, 65536, 0, 458747, 65536, 0, 524283, 65536, 0, 589819, 65536, 0, 655355, 65536, 0, 720891, 65536, 0, 786427, 65536, 0, 851963, 65536, 0, 917499, 65536, 0, 262140, 65536, 0, 327676, 65536, 0, 393212, 65536, 0, 458748, 65536, 0, 524284, 65536, 0, 589820, 65536, 0, 655356, 65536, 0, 720892, 65536, 0, 786428, 65536, 0, 851964, 65536, 0, 917500, 65536, 0, 262141, 65536, 0, 327677, 65536, 0, 393213, 65536, 0, 458749, 65536, 0, 524285, 65536, 0, 589821, 65536, 0, 655357, 65536, 0, 720893, 65536, 0, 786429, 65536, 0, 851965, 65536, 0, 262142, 65536, 0, 327678, 65536, 0, 393214, 65536, 0, 458750, 65536, 0, 524286, 65536, 0, 589822, 65536, 0, 655358, 65536, 0, 720894, 65536, 0, 786430, 65536, 0, 851966, 65536, 0, 262143, 65536, 0, 327679, 65536, 0, 393215, 65536, 0, 458751, 65536, 0, 524287, 65536, 0, 589823, 65536, 0, 655359, 65536, 0, 720895, 65536, 0, 786431, 65536, 0, 851967, 65536, 0, 65530, 196608, 0, 131066, 196608, 0, 196602, 196608, 0, 65531, 196608, 0, 131067, 196608, 0, 196603, 196608, 0, 65532, 196608, 0, 131068, 196608, 0, 196604, 196608, 0, 65533, 196608, 0, 131069, 196608, 0, 196605, 196608, 0, 65534, 196608, 0, 131070, 196608, 0, 196606, 196608, 0, 65535, 196608, 0, 131071, 196608, 0, 196607, 196608, 0)
layer_1/tile_data = PackedInt32Array(196608, 131072, 0, 196609, 131072, 0, 196610, 131072, 0, 196611, 131072, 0, 196612, 131072, 0, 196613, 131072, 0, 196614, 131072, 0, 196615, 131072, 0, 196616, 131072, 0, 196617, 131072, 0, 196618, 131072, 0, 196619, 131072, 0, 196620, 131072, 0, 196621, 131072, 0, 196622, 131072, 0, 196623, 131072, 0, 196624, 131072, 0, 196625, 131072, 0, 131072, 262144, 0, 131073, 262144, 0, 131074, 262144, 0, 131075, 262144, 0, 131080, 262144, 0, 131081, 262144, 0, 131082, 262144, 0, 131083, 262144, 0, 131084, 262144, 0, 131085, 262144, 0, 131086, 262144, 0, 131087, 262144, 0, 131088, 262144, 0, 131089, 262144, 0, 196626, 131072, 0, 196627, 131072, 0, 196628, 131072, 0, 196629, 131072, 0, 196630, 131072, 0, 196631, 131072, 0, 196632, 131072, 0, 196633, 131072, 0, 196634, 131072, 0, 196635, 131072, 0, 196636, 131072, 0, 196637, 131072, 0, 196638, 131072, 0, 131090, 262144, 0, 131091, 262144, 0, 131092, 262144, 0, 131093, 262144, 0, 131096, 262144, 0, 131097, 262144, 0, 131098, 262144, 0, 131099, 262144, 0, 131100, 262144, 0, 131101, 262144, 0, 131102, 262144, 0, 262142, 131072, 0, 262143, 131072, 0, 262138, 131072, 0, 262139, 131072, 0, 262140, 131072, 0, 262141, 131072, 0, 196607, 262144, 0, 196606, 262144, 0)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(218, 131)
script = ExtResource("2_73i0e")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(-0.500002, -0.500002)
scale = Vector2(3.96875, 3.96875)
texture = ExtResource("1_rkknv")

[node name="hookMark" type="Marker2D" parent="Player/Sprite2D"]
position = Vector2(-2.64567, 23.811)
scale = Vector2(0.251969, 0.251969)

[node name="Timer" type="Timer" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(1.5, 4)
shape = SubResource("RectangleShape2D_hlewy")

[node name="TankWalls" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="left" type="CollisionShape2D" parent="TankWalls"]
position = Vector2(-32, 354)
shape = SubResource("RectangleShape2D_75jqj")

[node name="right" type="CollisionShape2D" parent="TankWalls"]
position = Vector2(1150, 346.125)
shape = SubResource("RectangleShape2D_grls3")

[node name="down" type="CollisionShape2D" parent="TankWalls"]
position = Vector2(576.75, 733)
shape = SubResource("RectangleShape2D_abyy0")

[node name="allFish" type="Node" parent="."]

[node name="FishSpawn" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Scores" type="CanvasLayer" parent="."]
script = ExtResource("5_ify1r")
metadata/redFishScore = 0

[node name="GridContainer" type="HBoxContainer" parent="Scores"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_right = 260.0
offset_bottom = 99.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 0
metadata/_edit_group_ = true

[node name="redFishSprite" type="TextureRect" parent="Scores/GridContainer"]
layout_mode = 2
texture = ExtResource("5_rvl4h")
expand_mode = 2
stretch_mode = 5

[node name="redFishScore" type="Label" parent="Scores/GridContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("6_msi8s")

[node name="greenFishSprite" type="TextureRect" parent="Scores/GridContainer"]
layout_mode = 2
texture = ExtResource("6_ivwyn")
expand_mode = 3
stretch_mode = 5

[node name="greenFishScore" type="Label" parent="Scores/GridContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("6_msi8s")

[node name="blueFishSprite" type="TextureRect" parent="Scores/GridContainer"]
layout_mode = 2
texture = ExtResource("7_bxi1y")
expand_mode = 3
stretch_mode = 5

[node name="blueFishScore" type="Label" parent="Scores/GridContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("6_msi8s")

[node name="pauseMenu" type="PanelContainer" parent="."]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 382.0
offset_top = 214.0
offset_right = 708.0
offset_bottom = 498.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_wcsky")
metadata/_edit_group_ = true

[node name="Container" type="VBoxContainer" parent="pauseMenu"]
material = SubResource("CanvasItemMaterial_ykemc")
layout_mode = 2
theme = SubResource("Theme_j3kjn")
theme_override_constants/separation = 30

[node name="TextEdit" type="Label" parent="pauseMenu/Container"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="pauseMenu/Container"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="GridContainer" parent="pauseMenu/Container/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3
script = ExtResource("10_rjhi8")

[node name="Potion" type="Label" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Potion"

[node name="TextureRect" type="TextureRect" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
texture = ExtResource("10_kai1x")
stretch_mode = 5

[node name="potionEquip" type="Button" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="Bomb" type="Label" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Bomb"

[node name="TextureRect2" type="TextureRect" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
texture = ExtResource("13_ylwvx")
stretch_mode = 5

[node name="potionEquip2" type="Button" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="Label3" type="Label" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Harpoon"

[node name="TextureRect3" type="TextureRect" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
texture = ExtResource("11_liydy")
stretch_mode = 5

[node name="potionEquip3" type="Button" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="Label4" type="Label" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Fish Hook"

[node name="TextureRect4" type="TextureRect" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
texture = ExtResource("12_fpt8b")
stretch_mode = 5

[node name="potionEquip4" type="Button" parent="pauseMenu/Container/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="MarginContainer" type="MarginContainer" parent="pauseMenu/Container"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="Button" type="Button" parent="pauseMenu/Container/MarginContainer"]
layout_mode = 2
text = "Press to Unpause"

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("16_uiab7")
autoplay = true

[node name="FishDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_rri6f")

[connection signal="playerCaughtFish" from="Player" to="." method="_on_player_player_caught_fish"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_timer_timeout"]
[connection signal="timeout" from="FishSpawn" to="." method="_on_fish_spawn_timeout"]
[connection signal="pressed" from="pauseMenu/Container/MarginContainer2/VBoxContainer/potionEquip" to="." method="unpauseGame"]
[connection signal="pressed" from="pauseMenu/Container/MarginContainer2/VBoxContainer/potionEquip" to="Player" method="_on_potion_equip_pressed" binds= [0]]
[connection signal="pressed" from="pauseMenu/Container/MarginContainer2/VBoxContainer/potionEquip2" to="pauseMenu" method="unpauseGame"]
[connection signal="pressed" from="pauseMenu/Container/MarginContainer2/VBoxContainer/potionEquip2" to="Player" method="_on_potion_equip_pressed" binds= [1]]
[connection signal="pressed" from="pauseMenu/Container/MarginContainer2/VBoxContainer/potionEquip3" to="pauseMenu" method="unpauseGame"]
[connection signal="pressed" from="pauseMenu/Container/MarginContainer2/VBoxContainer/potionEquip3" to="Player" method="_on_potion_equip_pressed" binds= [2]]
[connection signal="pressed" from="pauseMenu/Container/MarginContainer2/VBoxContainer/potionEquip4" to="pauseMenu" method="unpauseGame"]
[connection signal="pressed" from="pauseMenu/Container/MarginContainer2/VBoxContainer/potionEquip4" to="Player" method="_on_potion_equip_pressed" binds= [3]]
